; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_getset.c_array_interface_get.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_getset.c_array_interface_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"data\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"strides\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"descr\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"typestr\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"shape\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"version\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @array_interface_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @array_interface_get(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = call i32* (...) @PyDict_New()
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %61

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @array_might_be_written(i32* %11)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @Py_DECREF(i32* %15)
  store i32* null, i32** %2, align 8
  br label %61

17:                                               ; preds = %10
  %18 = load i32*, i32** %3, align 8
  %19 = call i32* @array_dataptr_get(i32* %18)
  store i32* %19, i32** %5, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @PyDict_SetItemString(i32* %20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @Py_DECREF(i32* %23)
  %25 = load i32*, i32** %3, align 8
  %26 = call i32* @array_protocol_strides_get(i32* %25)
  store i32* %26, i32** %5, align 8
  %27 = load i32*, i32** %4, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @PyDict_SetItemString(i32* %27, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32* %28)
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @Py_DECREF(i32* %30)
  %32 = load i32*, i32** %3, align 8
  %33 = call i32* @array_protocol_descr_get(i32* %32)
  store i32* %33, i32** %5, align 8
  %34 = load i32*, i32** %4, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @PyDict_SetItemString(i32* %34, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0), i32* %35)
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @Py_DECREF(i32* %37)
  %39 = load i32*, i32** %3, align 8
  %40 = call i32 @PyArray_DESCR(i32* %39)
  %41 = call i32* @arraydescr_protocol_typestr_get(i32 %40)
  store i32* %41, i32** %5, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 @PyDict_SetItemString(i32* %42, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i32* %43)
  %45 = load i32*, i32** %5, align 8
  %46 = call i32 @Py_DECREF(i32* %45)
  %47 = load i32*, i32** %3, align 8
  %48 = call i32* @array_shape_get(i32* %47)
  store i32* %48, i32** %5, align 8
  %49 = load i32*, i32** %4, align 8
  %50 = load i32*, i32** %5, align 8
  %51 = call i32 @PyDict_SetItemString(i32* %49, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i32* %50)
  %52 = load i32*, i32** %5, align 8
  %53 = call i32 @Py_DECREF(i32* %52)
  %54 = call i32* @PyInt_FromLong(i32 3)
  store i32* %54, i32** %5, align 8
  %55 = load i32*, i32** %4, align 8
  %56 = load i32*, i32** %5, align 8
  %57 = call i32 @PyDict_SetItemString(i32* %55, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i32* %56)
  %58 = load i32*, i32** %5, align 8
  %59 = call i32 @Py_DECREF(i32* %58)
  %60 = load i32*, i32** %4, align 8
  store i32* %60, i32** %2, align 8
  br label %61

61:                                               ; preds = %17, %14, %9
  %62 = load i32*, i32** %2, align 8
  ret i32* %62
}

declare dso_local i32* @PyDict_New(...) #1

declare dso_local i64 @array_might_be_written(i32*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32* @array_dataptr_get(i32*) #1

declare dso_local i32 @PyDict_SetItemString(i32*, i8*, i32*) #1

declare dso_local i32* @array_protocol_strides_get(i32*) #1

declare dso_local i32* @array_protocol_descr_get(i32*) #1

declare dso_local i32* @arraydescr_protocol_typestr_get(i32) #1

declare dso_local i32 @PyArray_DESCR(i32*) #1

declare dso_local i32* @array_shape_get(i32*) #1

declare dso_local i32* @PyInt_FromLong(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
